--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4aeafdc",
+   "id": "1aa5673c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +12,30 @@
     "from datetime import datetime\n",
     "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
     "import os\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import PatternFill\n",
+    "from openpyxl.formatting.rule import CellIsRule\n",
     "\n",
     "# -------------------------\n",
-    "# Step 1. File selection (Tk file picker)\n",
+    "# Step 0. Helpers\n",
     "# -------------------------\n",
-    "root = Tk()\n",
-    "root.withdraw()  # hide root window\n",
+    "def ask_file():\n",
+    "    root = Tk()\n",
+    "    root.withdraw()\n",
+    "    path = filedialog.askopenfilename(\n",
+    "        title=\"Select ADWP Data File\",\n",
+    "        filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
+    "    )\n",
+    "    root.destroy()\n",
+    "    return path\n",
     "\n",
-    "file_path = filedialog.askopenfilename(\n",
-    "    title=\"Select ADWP Data File\",\n",
-    "    filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
-    ")\n",
-    "if not file_path:\n",
-    "    raise SystemExit(\"❌ No file selected.\")\n",
-    "print(f\"Selected file: {file_path}\")\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 2. Year & Month dialog (returns year int, month name)\n",
-    "# -------------------------\n",
     "def ask_year_month():\n",
+    "    root = Tk()\n",
+    "    root.withdraw()\n",
     "    result = {\"year\": None, \"month\": None}\n",
     "\n",
     "    def on_ok():\n",
-    "        result[\"year\"] = year_var.get()\n",
+    "        result[\"year\"] = int(year_var.get())\n",
     "        result[\"month\"] = month_var.get()\n",
     "        win.destroy()\n",
     "\n",
@@ -44,75 +45,73 @@
     "    Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
     "    Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
     "\n",
-    "    # Year dropdown\n",
     "    current_year = datetime.today().year\n",
     "    years = [str(current_year - 1), str(current_year), str(current_year + 1)]\n",
     "    year_var = StringVar(win)\n",
-    "    year_var.set(str(current_year))  # default\n",
+    "    year_var.set(str(current_year))\n",
     "    year_menu = OptionMenu(win, year_var, *years)\n",
     "    year_menu.grid(row=0, column=1, padx=10, pady=5)\n",
     "\n",
-    "    # Month dropdown\n",
     "    months = list(calendar.month_name)[1:]\n",
     "    month_var = StringVar(win)\n",
-    "    month_var.set(calendar.month_name[datetime.today().month])  # default\n",
+    "    month_var.set(calendar.month_name[datetime.today().month])\n",
     "    month_menu = OptionMenu(win, month_var, *months)\n",
     "    month_menu.grid(row=1, column=1, padx=10, pady=5)\n",
     "\n",
     "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
-    "\n",
-    "    win.wait_window()  # wait for dialog to close\n",
-    "    return int(result[\"year\"]), result[\"month\"]\n",
-    "\n",
-    "selected_year, selected_month = ask_year_month()\n",
-    "print(f\"Selected: {selected_month} {selected_year}\")\n",
+    "    win.wait_window()\n",
+    "    root.destroy()\n",
+    "    return result[\"year\"], result[\"month\"]\n",
     "\n",
     "# -------------------------\n",
-    "# Step 3. Read & normalize input\n",
+    "# Step 1. Pick file + year/month\n",
     "# -------------------------\n",
-    "print(\"⏳ Reading input file...\")\n",
+    "file_path = ask_file()\n",
+    "if not file_path:\n",
+    "    raise SystemExit(\"No file selected.\")\n",
+    "print(\"Selected file:\", file_path)\n",
+    "\n",
+    "sel_year, sel_month_name = ask_year_month()\n",
+    "sel_month = list(calendar.month_name).index(sel_month_name)\n",
+    "print(f\"Selected Year={sel_year}, Month={sel_month_name} ({sel_month})\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# Step 2. Read input & normalize months\n",
+    "# -------------------------\n",
+    "print(\"Reading Data sheet...\")\n",
     "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
     "\n",
-    "# normalize Period Month to first-of-month timestamps\n",
-    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\").dt.to_timestamp()\n",
-    "\n",
-    "# ensure numeric FTE\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\")\n",
     "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
     "\n",
     "# -------------------------\n",
-    "# Step 4. Build 24-month horizon\n",
+    "# Step 3. Build 24-month horizon (Period objects)\n",
     "# -------------------------\n",
-    "sel_year = selected_year\n",
-    "sel_month = list(calendar.month_name).index(selected_month)  # numeric month\n",
-    "curr_date = datetime(sel_year, sel_month, 1)\n",
-    "\n",
-    "start_date = datetime(sel_year, 1, 1)\n",
-    "horizon = pd.date_range(start=start_date, periods=24, freq=\"MS\")\n",
-    "month_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
+    "horizon = pd.period_range(start=f\"{sel_year}-01\", periods=24, freq=\"M\")\n",
+    "month_labels = [p.strftime(\"%b-%y\") for p in horizon]\n",
+    "selected_period = pd.Period(year=sel_year, month=sel_month, freq=\"M\")\n",
     "\n",
     "# -------------------------\n",
-    "# Step 5. Grouping and carry-forward logic\n",
+    "# Step 4. Grouping & carry-forward\n",
     "# -------------------------\n",
-    "output_records = []\n",
-    "\n",
-    "def get_key(row):\n",
-    "    \"\"\"Grouping key: prefer PID; otherwise use MPP ID. BF and GCB included.\"\"\"\n",
+    "def build_key(row):\n",
     "    pid = row.get(\"PID\")\n",
     "    mpp = row.get(\"MPP ID\")\n",
     "    gcb = row.get(\"GCB\")\n",
     "    bf = row.get(\"Business Framework\")\n",
     "    if pd.notna(pid) and str(pid).strip() != \"\":\n",
-    "        return (\"PID\", str(pid).strip(), str(gcb), str(bf))\n",
+    "        return (\"PID\", str(pid).strip(), str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
     "    else:\n",
-    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb), str(bf))\n",
+    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
     "\n",
-    "print(\"⏳ Processing records...\")\n",
-    "grouped = df.groupby(df.apply(get_key, axis=1))\n",
+    "print(\"Processing groups and applying carry-forward logic...\")\n",
+    "grouped = df.groupby(df.apply(build_key, axis=1))\n",
+    "output_records = []\n",
     "\n",
     "for key, group in grouped:\n",
-    "    # key: (\"PID\"/\"MPP\", id, GCB, BF)\n",
     "    kind = key[0]\n",
     "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
+    "    s = group.groupby(\"Period Month\", sort=True)[\"FTE\"].last()\n",
     "\n",
     "    latest = group.iloc[-1]\n",
     "    record = {\n",
@@ -128,65 +127,73 @@
     "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
     "    }\n",
     "\n",
-    "    # initialize horizon months\n",
-    "    for label in month_labels:\n",
-    "        record[label] = None\n",
+    "    # Initialize horizon months\n",
+    "    for lbl in month_labels:\n",
+    "        record[lbl] = None\n",
     "\n",
-    "    # last_fte holds the most recent known FTE (can be negative, e.g., -1)\n",
     "    last_fte = None\n",
-    "\n",
-    "    # iterate months in chronological horizon order\n",
-    "    for month_label in month_labels:\n",
-    "        month_dt = datetime.strptime(month_label, \"%b-%y\")\n",
-    "\n",
-    "        # find any records in this month (if multiple, take last by order)\n",
-    "        rows_in_month = group[group[\"Period Month\"] == month_dt]\n",
-    "        if not rows_in_month.empty:\n",
-    "            # use last record's FTE for that month\n",
-    "            val = rows_in_month[\"FTE\"].iloc[-1]\n",
-    "            # val may be NaN; treat numeric -1 as valid leaver marker\n",
-    "            if pd.isna(val):\n",
-    "                # keep last_fte as-is (no change)\n",
-    "                pass\n",
-    "            else:\n",
+    "    for p in horizon:\n",
+    "        lbl = p.strftime(\"%b-%y\")\n",
+    "        if p in s.index:\n",
+    "            val = s.loc[p]\n",
+    "            if pd.notna(val):\n",
     "                last_fte = val\n",
     "\n",
-    "        # set monthly cell to last_fte if available (this will also set -1 if that's the last_fte)\n",
-    "        if last_fte is not None:\n",
-    "            record[month_label] = last_fte\n",
-    "        else:\n",
-    "            record[month_label] = None\n",
+    "        # Monthly cell\n",
+    "        record[lbl] = last_fte if last_fte is not None else None\n",
     "\n",
-    "        # For snapshot FTE: set from last known fte seen up to and including selected month\n",
-    "        if month_dt <= curr_date:\n",
-    "            # Important: use last_fte (so -1 is preserved), not record[month_label] only\n",
+    "        # Snapshot FTE up to selected period\n",
+    "        if p <= selected_period:\n",
     "            record[\"FTE\"] = last_fte if last_fte is not None else None\n",
     "\n",
     "    output_records.append(record)\n",
     "\n",
     "# -------------------------\n",
-    "# Step 6. Build dataframe, sort and save\n",
+    "# Step 5. Build output dataframe, sort\n",
     "# -------------------------\n",
     "out_df = pd.DataFrame(output_records)\n",
+    "dims = [\n",
+    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\", \"FTE\", \"MPP ID\", \"Stack\"\n",
+    "]\n",
+    "dims = [c for c in dims if c in out_df.columns]\n",
+    "ordered_cols = dims + [c for c in month_labels if c in out_df.columns]\n",
+    "out_df = out_df[ordered_cols]\n",
     "\n",
-    "# Sorting order\n",
     "sort_cols = [\n",
     "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
     "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
     "]\n",
-    "# Ensure sort columns exist in dataframe\n",
     "existing_sort_cols = [c for c in sort_cols if c in out_df.columns]\n",
-    "out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
+    "if existing_sort_cols:\n",
+    "    out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
     "\n",
-    "# Save to Excel next to input file\n",
-    "out_file = os.path.join(\n",
-    "    os.path.dirname(file_path),\n",
-    "    f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\"\n",
-    ")\n",
+    "# -------------------------\n",
+    "# Step 6. Save output to Excel\n",
+    "# -------------------------\n",
+    "out_file = os.path.join(os.path.dirname(file_path), f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\")\n",
     "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
     "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
     "\n",
-    "print(f\"✅ ADWP Output written to: {out_file}\")\n",
+    "# -------------------------\n",
+    "# Step 7. Apply conditional formatting for negative values\n",
+    "# -------------------------\n",
+    "wb = load_workbook(out_file)\n",
+    "ws = wb[\"Output\"]\n",
+    "\n",
+    "red_fill = PatternFill(start_color=\"FFC7CE\", end_color=\"FFC7CE\", fill_type=\"solid\")\n",
+    "max_row = ws.max_row\n",
+    "max_col = ws.max_column\n",
+    "col_letters = [ws.cell(row=1, column=i).column_letter for i in range(1, max_col + 1)]\n",
+    "\n",
+    "for col_letter in col_letters:\n",
+    "    ws.conditional_formatting.add(\n",
+    "        f\"{col_letter}2:{col_letter}{max_row}\",\n",
+    "        CellIsRule(operator='lessThan', formula=['0'], fill=red_fill)\n",
+    "    )\n",
+    "\n",
+    "wb.save(out_file)\n",
+    "print(f\"✅ ADWP Output saved and negative values highlighted: {out_file}\")\n",
     "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
    ]
   },
