--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,198 +3,137 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa5673c",
+   "id": "62af3590",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import calendar\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, simpledialog\n",
     "from datetime import datetime\n",
-    "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
-    "import os\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.styles import PatternFill\n",
+    "from openpyxl.styles import Font\n",
     "from openpyxl.formatting.rule import CellIsRule\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 0. Helpers\n",
-    "# -------------------------\n",
-    "def ask_file():\n",
-    "    root = Tk()\n",
-    "    root.withdraw()\n",
-    "    path = filedialog.askopenfilename(\n",
-    "        title=\"Select ADWP Data File\",\n",
-    "        filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
-    "    )\n",
-    "    root.destroy()\n",
-    "    return path\n",
     "\n",
-    "def ask_year_month():\n",
-    "    root = Tk()\n",
-    "    root.withdraw()\n",
-    "    result = {\"year\": None, \"month\": None}\n",
-    "\n",
-    "    def on_ok():\n",
-    "        result[\"year\"] = int(year_var.get())\n",
-    "        result[\"month\"] = month_var.get()\n",
-    "        win.destroy()\n",
-    "\n",
-    "    win = Toplevel(root)\n",
-    "    win.title(\"Select Year and Month\")\n",
-    "\n",
-    "    Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
-    "    Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
-    "\n",
-    "    current_year = datetime.today().year\n",
-    "    years = [str(current_year - 1), str(current_year), str(current_year + 1)]\n",
-    "    year_var = StringVar(win)\n",
-    "    year_var.set(str(current_year))\n",
-    "    year_menu = OptionMenu(win, year_var, *years)\n",
-    "    year_menu.grid(row=0, column=1, padx=10, pady=5)\n",
-    "\n",
-    "    months = list(calendar.month_name)[1:]\n",
-    "    month_var = StringVar(win)\n",
-    "    month_var.set(calendar.month_name[datetime.today().month])\n",
-    "    month_menu = OptionMenu(win, month_var, *months)\n",
-    "    month_menu.grid(row=1, column=1, padx=10, pady=5)\n",
-    "\n",
-    "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
-    "    win.wait_window()\n",
-    "    root.destroy()\n",
-    "    return result[\"year\"], result[\"month\"]\n",
-    "\n",
-    "# -------------------------\n",
-    "# Step 1. Pick file + year/month\n",
-    "# -------------------------\n",
-    "file_path = ask_file()\n",
+    "# === Step 1: Select file ===\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()\n",
+    "file_path = filedialog.askopenfilename(title=\"Select ADWP Data File\", filetypes=[(\"Excel files\", \"*.xlsx\")])\n",
     "if not file_path:\n",
-    "    raise SystemExit(\"No file selected.\")\n",
-    "print(\"Selected file:\", file_path)\n",
+    "    raise Exception(\"❌ No file selected!\")\n",
     "\n",
-    "sel_year, sel_month_name = ask_year_month()\n",
-    "sel_month = list(calendar.month_name).index(sel_month_name)\n",
-    "print(f\"Selected Year={sel_year}, Month={sel_month_name} ({sel_month})\")\n",
+    "# === Step 2: Year & Month selection ===\n",
+    "year = simpledialog.askinteger(\"Select Year\", \"Enter base year (e.g., 2025):\")\n",
+    "month = simpledialog.askinteger(\"Select Month\", \"Enter base month number (1-12):\")\n",
+    "if not year or not month:\n",
+    "    raise Exception(\"❌ Year/Month not selected!\")\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 2. Read input & normalize months\n",
-    "# -------------------------\n",
-    "print(\"Reading Data sheet...\")\n",
-    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "selected_period = datetime(year, month, 1)\n",
     "\n",
-    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\")\n",
-    "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
+    "# === Step 3: Load Data ===\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\")\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 3. Build 24-month horizon (Period objects)\n",
-    "# -------------------------\n",
-    "horizon = pd.period_range(start=f\"{sel_year}-01\", periods=24, freq=\"M\")\n",
-    "month_labels = [p.strftime(\"%b-%y\") for p in horizon]\n",
-    "selected_period = pd.Period(year=sel_year, month=sel_month, freq=\"M\")\n",
+    "# Ensure Period Month is datetime\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"])\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 4. Grouping & carry-forward\n",
-    "# -------------------------\n",
-    "def build_key(row):\n",
-    "    pid = row.get(\"PID\")\n",
-    "    mpp = row.get(\"MPP ID\")\n",
-    "    gcb = row.get(\"GCB\")\n",
-    "    bf = row.get(\"Business Framework\")\n",
-    "    if pd.notna(pid) and str(pid).strip() != \"\":\n",
-    "        return (\"PID\", str(pid).strip(), str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
-    "    else:\n",
-    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
+    "# Horizon: 24 months\n",
+    "horizon = [selected_period + relativedelta(months=i) for i in range(24)]\n",
+    "horizon_labels = [d.strftime(\"%b-%y\") for d in horizon]\n",
     "\n",
-    "print(\"Processing groups and applying carry-forward logic...\")\n",
-    "grouped = df.groupby(df.apply(build_key, axis=1))\n",
-    "output_records = []\n",
     "\n",
-    "for key, group in grouped:\n",
-    "    kind = key[0]\n",
-    "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
-    "    s = group.groupby(\"Period Month\", sort=True)[\"FTE\"].last()\n",
+    "# === Step 4: Helper to snapshot FTE ===\n",
+    "def get_snapshot_fte(series, sel_period):\n",
+    "    \"\"\"Return the FTE value as of selected period, even if it starts later.\"\"\"\n",
+    "    if sel_period in series.index:\n",
+    "        return series.loc[sel_period]\n",
+    "    future_periods = [p for p in series.index if p > sel_period]\n",
+    "    if future_periods:\n",
+    "        return series.loc[future_periods[0]]\n",
+    "    past_periods = [p for p in series.index if p < sel_period]\n",
+    "    if past_periods:\n",
+    "        return series.loc[past_periods[-1]]\n",
+    "    return None\n",
     "\n",
-    "    latest = group.iloc[-1]\n",
-    "    record = {\n",
-    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
-    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
-    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
-    "        \"Country R1\": latest.get(\"Country R1\"),\n",
-    "        \"Country R2\": latest.get(\"Country R2\"),\n",
-    "        \"Country R3\": latest.get(\"Country R3\"),\n",
-    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
-    "        \"GCB\": latest.get(\"GCB\"),\n",
-    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
-    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
-    "    }\n",
     "\n",
-    "    # Initialize horizon months\n",
-    "    for lbl in month_labels:\n",
-    "        record[lbl] = None\n",
+    "# === Step 5: Process Data ===\n",
+    "records = []\n",
+    "grouped = df.groupby(\n",
+    "    df.apply(lambda r: (r[\"PID\"], r[\"GCB\"], r[\"Business Framework\"]) \n",
+    "             if pd.notna(r[\"PID\"]) \n",
+    "             else (r[\"MPP ID\"], r[\"GCB\"], r[\"Business Framework\"]), axis=1)\n",
+    ")\n",
     "\n",
-    "    last_fte = None\n",
-    "    for p in horizon:\n",
-    "        lbl = p.strftime(\"%b-%y\")\n",
-    "        if p in s.index:\n",
-    "            val = s.loc[p]\n",
-    "            if pd.notna(val):\n",
-    "                last_fte = val\n",
+    "for _, group in grouped:\n",
+    "    # Split rows if BF changes mid-way\n",
+    "    bf_groups = group.groupby(\"Business Framework\")\n",
     "\n",
-    "        # Monthly cell\n",
-    "        record[lbl] = last_fte if last_fte is not None else None\n",
+    "    for bf, bf_group in bf_groups:\n",
+    "        s = bf_group.set_index(\"Period Month\")[\"FTE\"].sort_index()\n",
     "\n",
-    "        # Snapshot FTE up to selected period\n",
-    "        if p <= selected_period:\n",
-    "            record[\"FTE\"] = last_fte if last_fte is not None else None\n",
+    "        record = {\n",
+    "            \"Business Service L2\": bf_group[\"Business Service L2\"].iloc[0],\n",
+    "            \"Business Framework Group\": bf_group[\"Business Framework Group\"].iloc[0],\n",
+    "            \"Business Framework\": bf,\n",
+    "            \"Country R1\": bf_group[\"Country R1\"].iloc[0],\n",
+    "            \"Country R2\": bf_group[\"Country R2\"].iloc[0],\n",
+    "            \"Country R3\": bf_group[\"Country R3\"].iloc[0],\n",
+    "            \"PID\": bf_group[\"PID\"].iloc[0] if pd.notna(bf_group[\"PID\"].iloc[0]) else None,\n",
+    "            \"GCB\": bf_group[\"GCB\"].iloc[0],\n",
+    "            \"MPP ID\": bf_group[\"MPP ID\"].iloc[0] if pd.isna(bf_group[\"PID\"].iloc[0]) else None,\n",
+    "            \"Stack\": bf_group[\"Stack\"].iloc[0] if pd.isna(bf_group[\"PID\"].iloc[0]) else None,\n",
+    "        }\n",
     "\n",
-    "    output_records.append(record)\n",
+    "        last_fte = None\n",
+    "        for d, label in zip(horizon, horizon_labels):\n",
+    "            if d in s.index:\n",
+    "                last_fte = s.loc[d]\n",
+    "                record[label] = last_fte\n",
+    "            else:\n",
+    "                record[label] = last_fte\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 5. Build output dataframe, sort\n",
-    "# -------------------------\n",
-    "out_df = pd.DataFrame(output_records)\n",
-    "dims = [\n",
+    "        # Snapshot FTE\n",
+    "        record[\"FTE\"] = get_snapshot_fte(s, selected_period)\n",
+    "\n",
+    "        records.append(record)\n",
+    "\n",
+    "\n",
+    "# === Step 6: Build Output ===\n",
+    "out_df = pd.DataFrame(records)\n",
+    "\n",
+    "# Reorder columns\n",
+    "base_cols = [\n",
     "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
-    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\", \"FTE\", \"MPP ID\", \"Stack\"\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\",\n",
+    "    \"FTE\", \"MPP ID\", \"Stack\"\n",
     "]\n",
-    "dims = [c for c in dims if c in out_df.columns]\n",
-    "ordered_cols = dims + [c for c in month_labels if c in out_df.columns]\n",
-    "out_df = out_df[ordered_cols]\n",
+    "final_cols = base_cols + horizon_labels\n",
+    "out_df = out_df[final_cols]\n",
     "\n",
-    "sort_cols = [\n",
-    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
-    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
-    "]\n",
-    "existing_sort_cols = [c for c in sort_cols if c in out_df.columns]\n",
-    "if existing_sort_cols:\n",
-    "    out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 6. Save output to Excel\n",
-    "# -------------------------\n",
-    "out_file = os.path.join(os.path.dirname(file_path), f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\")\n",
-    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
-    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "# === Step 7: Save Output ===\n",
+    "out_file = file_path.replace(\".xlsx\", \"_ADWP_Output.xlsx\")\n",
+    "out_df.to_excel(out_file, sheet_name=\"Output\", index=False)\n",
     "\n",
-    "# -------------------------\n",
-    "# Step 7. Apply conditional formatting for negative values\n",
-    "# -------------------------\n",
+    "# === Step 8: Highlight negative numbers in red font ===\n",
     "wb = load_workbook(out_file)\n",
     "ws = wb[\"Output\"]\n",
     "\n",
-    "red_fill = PatternFill(start_color=\"FFC7CE\", end_color=\"FFC7CE\", fill_type=\"solid\")\n",
     "max_row = ws.max_row\n",
     "max_col = ws.max_column\n",
     "col_letters = [ws.cell(row=1, column=i).column_letter for i in range(1, max_col + 1)]\n",
     "\n",
+    "red_font = Font(color=\"FF0000\")\n",
+    "\n",
     "for col_letter in col_letters:\n",
     "    ws.conditional_formatting.add(\n",
     "        f\"{col_letter}2:{col_letter}{max_row}\",\n",
-    "        CellIsRule(operator='lessThan', formula=['0'], fill=red_fill)\n",
+    "        CellIsRule(operator=\"lessThan\", formula=[\"0\"], font=red_font)\n",
     "    )\n",
     "\n",
     "wb.save(out_file)\n",
-    "print(f\"✅ ADWP Output saved and negative values highlighted: {out_file}\")\n",
-    "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
+    "print(f\"✅ ADWP processing complete. File saved: {out_file}\")\n"
    ]
   },
   {
