--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,7 +3,232 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a333996f",
+   "id": "628880d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import calendar\n",
+    "from datetime import datetime\n",
+    "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
+    "import os\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import Font\n",
+    "from openpyxl.formatting.rule import CellIsRule\n",
+    "\n",
+    "# -------------------------\n",
+    "# Helpers: file picker + year/month dialog (dropdowns)\n",
+    "# -------------------------\n",
+    "def ask_file():\n",
+    "    root = Tk()\n",
+    "    root.withdraw()\n",
+    "    path = filedialog.askopenfilename(\n",
+    "        title=\"Select ADWP Data File\",\n",
+    "        filetypes=[(\"Excel files\", \"*.xlsx\")]\n",
+    "    )\n",
+    "    root.destroy()\n",
+    "    return path\n",
+    "\n",
+    "def ask_year_month():\n",
+    "    root = Tk()\n",
+    "    root.withdraw()\n",
+    "    result = {\"year\": None, \"month\": None}\n",
+    "\n",
+    "    def on_ok():\n",
+    "        result[\"year\"] = int(year_var.get())\n",
+    "        result[\"month\"] = month_var.get()\n",
+    "        win.destroy()\n",
+    "\n",
+    "    win = Toplevel(root)\n",
+    "    win.title(\"Select Year and Month\")\n",
+    "\n",
+    "    Label(win, text=\"Select Year:\").grid(row=0, column=0, padx=10, pady=5)\n",
+    "    Label(win, text=\"Select Month:\").grid(row=1, column=0, padx=10, pady=5)\n",
+    "\n",
+    "    current_year = datetime.today().year\n",
+    "    years = [str(current_year - 1), str(current_year), str(current_year + 1)]\n",
+    "    year_var = StringVar(win)\n",
+    "    year_var.set(str(current_year))\n",
+    "    year_menu = OptionMenu(win, year_var, *years)\n",
+    "    year_menu.grid(row=0, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    months = list(calendar.month_name)[1:]\n",
+    "    month_var = StringVar(win)\n",
+    "    month_var.set(calendar.month_name[datetime.today().month])\n",
+    "    month_menu = OptionMenu(win, month_var, *months)\n",
+    "    month_menu.grid(row=1, column=1, padx=10, pady=5)\n",
+    "\n",
+    "    Button(win, text=\"OK\", command=on_ok).grid(row=2, column=0, columnspan=2, pady=10)\n",
+    "    win.wait_window()\n",
+    "    root.destroy()\n",
+    "    return result[\"year\"], result[\"month\"]\n",
+    "\n",
+    "# -------------------------\n",
+    "# 1) File and selection\n",
+    "# -------------------------\n",
+    "file_path = ask_file()\n",
+    "if not file_path:\n",
+    "    raise SystemExit(\"No file selected.\")\n",
+    "print(\"Selected file:\", file_path)\n",
+    "\n",
+    "sel_year, sel_month_name = ask_year_month()\n",
+    "sel_month = list(calendar.month_name).index(sel_month_name)\n",
+    "print(f\"Selected Year={sel_year}, Month={sel_month_name} ({sel_month})\")\n",
+    "\n",
+    "selected_period = pd.Period(year=sel_year, month=sel_month, freq=\"M\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# 2) Load & normalize Data sheet\n",
+    "# -------------------------\n",
+    "print(\"Reading Data sheet...\")\n",
+    "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
+    "\n",
+    "# Standardize Period Month to Period[M] and FTE numeric\n",
+    "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\")\n",
+    "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
+    "\n",
+    "# -------------------------\n",
+    "# 3) Build 24-month horizon starting from Jan of selected year\n",
+    "#     (Jan-selected_year .. Dec-(selected_year+1))\n",
+    "# -------------------------\n",
+    "horizon = pd.period_range(start=f\"{sel_year}-01\", periods=24, freq=\"M\")\n",
+    "month_labels = [p.strftime(\"%b-%y\") for p in horizon]\n",
+    "\n",
+    "# -------------------------\n",
+    "# 4) Grouping key (PID if present; else MPP ID). BF included so changes split rows.\n",
+    "# -------------------------\n",
+    "def build_key(row):\n",
+    "    pid = row.get(\"PID\")\n",
+    "    mpp = row.get(\"MPP ID\")\n",
+    "    gcb = row.get(\"GCB\")\n",
+    "    bf = row.get(\"Business Framework\")\n",
+    "    if pd.notna(pid) and str(pid).strip() != \"\":\n",
+    "        return (\"PID\", str(pid).strip(), str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
+    "    else:\n",
+    "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
+    "\n",
+    "def snapshot_fte(series, sel_period):\n",
+    "    \"\"\"Return snapshot FTE for the selected period:\n",
+    "       - If value exists at sel_period => return it\n",
+    "       - Else if there is future value => return first future value\n",
+    "       - Else if there is past value => return last past value\n",
+    "       - Else None\n",
+    "    \"\"\"\n",
+    "    if len(series) == 0:\n",
+    "        return None\n",
+    "    if sel_period in series.index:\n",
+    "        return series.loc[sel_period]\n",
+    "    future = [p for p in series.index if p > sel_period]\n",
+    "    if future:\n",
+    "        return series.loc[future[0]]\n",
+    "    past = [p for p in series.index if p < sel_period]\n",
+    "    if past:\n",
+    "        return series.loc[past[-1]]\n",
+    "    return None\n",
+    "\n",
+    "# -------------------------\n",
+    "# 5) Process each group and apply carry-forward per group (BF-scoped)\n",
+    "# -------------------------\n",
+    "print(\"Processing groups and applying carry-forward logic...\")\n",
+    "grouped = df.groupby(df.apply(build_key, axis=1))\n",
+    "output_records = []\n",
+    "\n",
+    "for key, group in grouped:\n",
+    "    kind = key[0]\n",
+    "    # sort by period month\n",
+    "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
+    "    # series of month -> last FTE in that month\n",
+    "    s = group.groupby(\"Period Month\", sort=True)[\"FTE\"].last()\n",
+    "\n",
+    "    # dimension columns: use latest row's dims for non-time fields\n",
+    "    latest = group.iloc[-1]\n",
+    "    record = {\n",
+    "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
+    "        \"Business Framework Group\": latest.get(\"Business Framework Group\"),\n",
+    "        \"Business Framework\": latest.get(\"Business Framework\"),\n",
+    "        \"Country R1\": latest.get(\"Country R1\"),\n",
+    "        \"Country R2\": latest.get(\"Country R2\"),\n",
+    "        \"Country R3\": latest.get(\"Country R3\"),\n",
+    "        \"PID\": latest.get(\"PID\") if kind == \"PID\" else None,\n",
+    "        \"GCB\": latest.get(\"GCB\"),\n",
+    "        \"MPP ID\": latest.get(\"MPP ID\") if kind == \"MPP\" else None,\n",
+    "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
+    "    }\n",
+    "\n",
+    "    # carry-forward: iterate horizon chronologically and carry last known FTE (including -1)\n",
+    "    last_fte = None\n",
+    "    for p in horizon:\n",
+    "        lbl = p.strftime(\"%b-%y\")\n",
+    "        if p in s.index:\n",
+    "            val = s.loc[p]\n",
+    "            # treat numeric values (including -1) as valid; NaN means no change\n",
+    "            if pd.notna(val):\n",
+    "                last_fte = val\n",
+    "        record[lbl] = last_fte if last_fte is not None else None\n",
+    "\n",
+    "    # snapshot FTE: use the series s to derive selected snapshot using rules above\n",
+    "    record[\"FTE\"] = snapshot_fte(s, selected_period)\n",
+    "\n",
+    "    output_records.append(record)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 6) Build DataFrame, order columns and sort\n",
+    "# -------------------------\n",
+    "out_df = pd.DataFrame(output_records)\n",
+    "\n",
+    "# Ensure dims + FTE + MPP/Stack then months (keep only existing columns)\n",
+    "dims = [\n",
+    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\",\n",
+    "    \"FTE\", \"MPP ID\", \"Stack\"\n",
+    "]\n",
+    "dims = [c for c in dims if c in out_df.columns]\n",
+    "ordered_cols = dims + [c for c in month_labels if c in out_df.columns]\n",
+    "out_df = out_df[ordered_cols]\n",
+    "\n",
+    "# Sorting\n",
+    "sort_cols = [\n",
+    "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
+    "]\n",
+    "existing_sort_cols = [c for c in sort_cols if c in out_df.columns]\n",
+    "if existing_sort_cols:\n",
+    "    out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 7) Save Output to Excel\n",
+    "# -------------------------\n",
+    "out_file = os.path.join(os.path.dirname(file_path), f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\")\n",
+    "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
+    "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
+    "\n",
+    "# -------------------------\n",
+    "# 8) Apply conditional formatting: negative numbers -> red font\n",
+    "# -------------------------\n",
+    "wb = load_workbook(out_file)\n",
+    "ws = wb[\"Output\"]\n",
+    "\n",
+    "max_row = ws.max_row\n",
+    "max_col = ws.max_column\n",
+    "col_letters = [ws.cell(row=1, column=i).column_letter for i in range(1, max_col + 1)]\n",
+    "\n",
+    "red_font = Font(color=\"FF0000\")\n",
+    "for col_letter in col_letters:\n",
+    "    ws.conditional_formatting.add(\n",
+    "        f\"{col_letter}2:{col_letter}{max_row}\",\n",
+    "        CellIsRule(operator='lessThan', formula=['0'], font=red_font)\n",
+    "    )\n",
+    "\n",
+    "wb.save(out_file)\n",
+    "\n",
+    "print(f\"✅ ADWP Output saved: {out_file}\")\n",
+    "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b902159",
    "metadata": {},
    "outputs": [],
    "source": [
