--- a/WFP.ipynb
+++ b/WFP.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628880d1",
+   "id": "53e7eb0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
     "from tkinter import Tk, filedialog, StringVar, OptionMenu, Button, Label, Toplevel\n",
     "import os\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.styles import Font\n",
     "from openpyxl.formatting.rule import CellIsRule\n",
+    "from openpyxl.styles import Font\n",
     "\n",
     "# -------------------------\n",
-    "# Helpers: file picker + year/month dialog (dropdowns)\n",
+    "# Step 0. Helpers\n",
     "# -------------------------\n",
     "def ask_file():\n",
     "    root = Tk()\n",
@@ -64,7 +64,7 @@
     "    return result[\"year\"], result[\"month\"]\n",
     "\n",
     "# -------------------------\n",
-    "# 1) File and selection\n",
+    "# Step 1. Pick file + year/month\n",
     "# -------------------------\n",
     "file_path = ask_file()\n",
     "if not file_path:\n",
@@ -75,27 +75,24 @@
     "sel_month = list(calendar.month_name).index(sel_month_name)\n",
     "print(f\"Selected Year={sel_year}, Month={sel_month_name} ({sel_month})\")\n",
     "\n",
-    "selected_period = pd.Period(year=sel_year, month=sel_month, freq=\"M\")\n",
-    "\n",
     "# -------------------------\n",
-    "# 2) Load & normalize Data sheet\n",
+    "# Step 2. Read input & normalize months\n",
     "# -------------------------\n",
     "print(\"Reading Data sheet...\")\n",
     "df = pd.read_excel(file_path, sheet_name=\"Data\", engine=\"openpyxl\")\n",
     "\n",
-    "# Standardize Period Month to Period[M] and FTE numeric\n",
     "df[\"Period Month\"] = pd.to_datetime(df[\"Period Month\"], errors=\"coerce\").dt.to_period(\"M\")\n",
     "df[\"FTE\"] = pd.to_numeric(df[\"FTE\"], errors=\"coerce\")\n",
     "\n",
     "# -------------------------\n",
-    "# 3) Build 24-month horizon starting from Jan of selected year\n",
-    "#     (Jan-selected_year .. Dec-(selected_year+1))\n",
+    "# Step 3. Build 24-month horizon (Period objects)\n",
     "# -------------------------\n",
     "horizon = pd.period_range(start=f\"{sel_year}-01\", periods=24, freq=\"M\")\n",
     "month_labels = [p.strftime(\"%b-%y\") for p in horizon]\n",
+    "selected_period = pd.Period(year=sel_year, month=sel_month, freq=\"M\")\n",
     "\n",
     "# -------------------------\n",
-    "# 4) Grouping key (PID if present; else MPP ID). BF included so changes split rows.\n",
+    "# Step 4. Grouping & carry-forward\n",
     "# -------------------------\n",
     "def build_key(row):\n",
     "    pid = row.get(\"PID\")\n",
@@ -107,40 +104,18 @@
     "    else:\n",
     "        return (\"MPP\", str(mpp).strip() if pd.notna(mpp) else \"\", str(gcb).strip() if pd.notna(gcb) else \"\", str(bf).strip() if pd.notna(bf) else \"\")\n",
     "\n",
-    "def snapshot_fte(series, sel_period):\n",
-    "    \"\"\"Return snapshot FTE for the selected period:\n",
-    "       - If value exists at sel_period => return it\n",
-    "       - Else if there is future value => return first future value\n",
-    "       - Else if there is past value => return last past value\n",
-    "       - Else None\n",
-    "    \"\"\"\n",
-    "    if len(series) == 0:\n",
-    "        return None\n",
-    "    if sel_period in series.index:\n",
-    "        return series.loc[sel_period]\n",
-    "    future = [p for p in series.index if p > sel_period]\n",
-    "    if future:\n",
-    "        return series.loc[future[0]]\n",
-    "    past = [p for p in series.index if p < sel_period]\n",
-    "    if past:\n",
-    "        return series.loc[past[-1]]\n",
-    "    return None\n",
-    "\n",
-    "# -------------------------\n",
-    "# 5) Process each group and apply carry-forward per group (BF-scoped)\n",
-    "# -------------------------\n",
     "print(\"Processing groups and applying carry-forward logic...\")\n",
     "grouped = df.groupby(df.apply(build_key, axis=1))\n",
     "output_records = []\n",
     "\n",
     "for key, group in grouped:\n",
     "    kind = key[0]\n",
-    "    # sort by period month\n",
     "    group = group.sort_values(\"Period Month\", ignore_index=True)\n",
-    "    # series of month -> last FTE in that month\n",
     "    s = group.groupby(\"Period Month\", sort=True)[\"FTE\"].last()\n",
     "\n",
-    "    # dimension columns: use latest row's dims for non-time fields\n",
+    "    first_month = s.index.min()\n",
+    "    last_month = s.index.max()\n",
+    "\n",
     "    latest = group.iloc[-1]\n",
     "    record = {\n",
     "        \"Business Service L2\": latest.get(\"Business Service L2\"),\n",
@@ -155,38 +130,52 @@
     "        \"Stack\": latest.get(\"Stack\") if kind == \"MPP\" else None\n",
     "    }\n",
     "\n",
-    "    # carry-forward: iterate horizon chronologically and carry last known FTE (including -1)\n",
+    "    # Initialize horizon months\n",
+    "    for lbl in month_labels:\n",
+    "        record[lbl] = None\n",
+    "\n",
     "    last_fte = None\n",
     "    for p in horizon:\n",
     "        lbl = p.strftime(\"%b-%y\")\n",
+    "\n",
     "        if p in s.index:\n",
     "            val = s.loc[p]\n",
-    "            # treat numeric values (including -1) as valid; NaN means no change\n",
     "            if pd.notna(val):\n",
     "                last_fte = val\n",
-    "        record[lbl] = last_fte if last_fte is not None else None\n",
+    "            record[lbl] = last_fte\n",
     "\n",
-    "    # snapshot FTE: use the series s to derive selected snapshot using rules above\n",
-    "    record[\"FTE\"] = snapshot_fte(s, selected_period)\n",
+    "        elif p > last_month:\n",
+    "            # stop filling old BF rows\n",
+    "            if last_month <= selected_period:\n",
+    "                record[lbl] = None\n",
+    "            else:\n",
+    "                # future BF group → allow carry forward\n",
+    "                record[lbl] = last_fte\n",
+    "        else:\n",
+    "            record[lbl] = last_fte\n",
+    "\n",
+    "    # FTE snapshot column\n",
+    "    if selected_period in s.index:\n",
+    "        record[\"FTE\"] = s.loc[selected_period]\n",
+    "    elif selected_period < first_month:\n",
+    "        record[\"FTE\"] = s.loc[first_month]\n",
+    "    else:\n",
+    "        record[\"FTE\"] = s.loc[last_month]\n",
     "\n",
     "    output_records.append(record)\n",
     "\n",
     "# -------------------------\n",
-    "# 6) Build DataFrame, order columns and sort\n",
+    "# Step 5. Build output dataframe, sort\n",
     "# -------------------------\n",
     "out_df = pd.DataFrame(output_records)\n",
-    "\n",
-    "# Ensure dims + FTE + MPP/Stack then months (keep only existing columns)\n",
     "dims = [\n",
     "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
-    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\",\n",
-    "    \"FTE\", \"MPP ID\", \"Stack\"\n",
+    "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"GCB\", \"FTE\", \"MPP ID\", \"Stack\"\n",
     "]\n",
     "dims = [c for c in dims if c in out_df.columns]\n",
     "ordered_cols = dims + [c for c in month_labels if c in out_df.columns]\n",
     "out_df = out_df[ordered_cols]\n",
     "\n",
-    "# Sorting\n",
     "sort_cols = [\n",
     "    \"Business Service L2\", \"Business Framework Group\", \"Business Framework\",\n",
     "    \"Country R1\", \"Country R2\", \"Country R3\", \"PID\", \"MPP ID\", \"GCB\"\n",
@@ -196,14 +185,14 @@
     "    out_df = out_df.sort_values(existing_sort_cols, na_position=\"last\").reset_index(drop=True)\n",
     "\n",
     "# -------------------------\n",
-    "# 7) Save Output to Excel\n",
+    "# Step 6. Save output to Excel\n",
     "# -------------------------\n",
     "out_file = os.path.join(os.path.dirname(file_path), f\"ADWP_Output_{sel_year}_{sel_month:02}.xlsx\")\n",
     "with pd.ExcelWriter(out_file, engine=\"openpyxl\") as writer:\n",
     "    out_df.to_excel(writer, sheet_name=\"Output\", index=False)\n",
     "\n",
     "# -------------------------\n",
-    "# 8) Apply conditional formatting: negative numbers -> red font\n",
+    "# Step 7. Apply conditional formatting (negative values = red font)\n",
     "# -------------------------\n",
     "wb = load_workbook(out_file)\n",
     "ws = wb[\"Output\"]\n",
@@ -213,6 +202,7 @@
     "col_letters = [ws.cell(row=1, column=i).column_letter for i in range(1, max_col + 1)]\n",
     "\n",
     "red_font = Font(color=\"FF0000\")\n",
+    "\n",
     "for col_letter in col_letters:\n",
     "    ws.conditional_formatting.add(\n",
     "        f\"{col_letter}2:{col_letter}{max_row}\",\n",
@@ -220,15 +210,14 @@
     "    )\n",
     "\n",
     "wb.save(out_file)\n",
-    "\n",
-    "print(f\"✅ ADWP Output saved: {out_file}\")\n",
+    "print(f\"✅ ADWP Output saved with negatives in red text: {out_file}\")\n",
     "print(f\"Rows: {len(out_df):,}, Columns: {len(out_df.columns):,}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b902159",
+   "id": "89e6ddbc",
    "metadata": {},
    "outputs": [],
    "source": [
